<resources>
    <string name="app_name">Kotlin APP</string>
    <string name="hello_name">Hello,%1$s</string>
    <string name="type_your_name">Type your name..</string>
    <string name="send">Send</string>
    <string name="result">Result!</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="send_name_to_result_screen">Send name to Result screen</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_the_result">Set the Result</string>
    <string name="cancel_the_result">Cancel the Result</string>
    <string name="result_canceled">Result canceled</string>
</resources>